--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "lucide-react": "^0.564.0",
-    "react-dom": "^19.2.4"
+    "react": "19.0.0",
+    "lucide-react": "0.460.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
